--- a/lazarus/components/sparta/mdi/source/sparta_basicresizeframe.lfm
+++ b/lazarus/components/sparta/mdi/source/sparta_basicresizeframe.lfm
@@ -168,6 +168,7 @@ object BasicResizeFrame: TBasicResizeFrame
     ClientHeight = 427
     ClientWidth = 287
     TabOrder = 4
+    OnPaint = pBGPaint
     object pFakeMenu: TPanel
       AnchorSideLeft.Control = pBG
       AnchorSideTop.Control = pBG
@@ -199,7 +200,7 @@ object BasicResizeFrame: TBasicResizeFrame
     BevelOuter = bvNone
     ClientHeight = 152
     ClientWidth = 152
-    Color = clGreen
+    Color = clBtnFace
     ParentColor = False
     TabOrder = 5
     object pFormHandler: TPanel
