--- a/lazarus/docs/html/fpdoc.css
+++ b/lazarus/docs/html/fpdoc.css
@@ -1,5 +1,5 @@
 /*
-  $Id: fpdoc.css 32727 2011-10-07 07:47:29Z vincents $
+  $Id: fpdoc.css 55589 2017-07-25 13:58:15Z wp $
 
   Default style sheet for FPDoc reference documentation
   by Sebastian Guenther, sg@freepascal.org
@@ -17,7 +17,7 @@ body, p, th, td, caption, h1, h2, h3, ul, ol, dl {
 }
 
 tt, span.kw, pre {
-  font-family: Courier, monospace
+  font-family: "Courier New", Courier, monospace
 }
 
 body, p, th, td, caption, ul, ol, dl, tt, span.kw, pre {
