Updates on made on 2017-09-06
* FPC Changes *

r37150 | michael
* Forgot to commit
r37151 | florian
* improve node complexity calculations for type nodes

* Lazarus Changes *

r55788 | juha
EasyLazFreeType: Allow freeing TFreeTypeFont after EasyLazFreeType finalization. Issue #32371, patch from Andrey Zubarev.
r55789 | juha
LCL-GTK2: Partly revert r53653, check for gtk_minor_version again. Issue #32196.
r55790 | zeljko
Qt,Qt5: implemented ScrollBy for TWSCustomFrame
r55791 | juha
jcf2: Support type helpers. Issue #32267, patch from delfion.

--- a/lazarus/components/onlinepackagemanager/opkman_createjsonforupdatesfrm.lfm
+++ b/lazarus/components/onlinepackagemanager/opkman_createjsonforupdatesfrm.lfm
@@ -13,6 +13,7 @@ object CreateJSONForUpdatesFrm: TCreateJSONForUpdatesFrm
   OnDestroy = FormDestroy
   PopupMode = pmExplicit
   Position = poOwnerFormCenter
+  LCLVersion = '1.9.0.0'
   object pnButtons: TPanel
     Left = 0
     Height = 41
